# FatturaView

./: .gitignore  AutoUpdater.cpp  AutoUpdater.h  CONFIGURAZIONE_FOGLI_STILE.md  EXECUTION_POLICY_RISOLTO.md  FIX_EXECUTION_POLICY.md  FatturaElettronicaParser.cpp  FatturaElettronicaParser.h  FatturaView.cpp  FatturaView.rc  FatturaView.slnx  FatturaView.vcxproj  FatturaView.vcxproj.filters  FatturaViewer.cpp  FatturaViewer.cpp.bak  FatturaViewer.h  GUIDA_FIRMA_DIGITALE.md  GUIDA_RISOLUZIONE_AVVISO_FOXIT.md  GUIDA_USO.md  IMPLEMENTAZIONE_COMPLETATA.md  IMPLEMENTAZIONE_FIRMA_DIGITALE.md  IMPLEMENTAZIONE_MENU_CONTESTUALE.md  LICENSE  MENU_CONTESTUALE_LISTBOX.md  NOTIFICHE_POPUP_IMPLEMENTATE.md  PdfSigner.cpp  PdfSigner.h  RCa12204  README.md  RISPOSTA_AVVISO_FOXIT.md  Resource.h  SETUP_FIRMA_COMPLETATO.md  SignExecutable.bat  SignExecutable.ps1  TROUBLESHOOTING.md  app.manifest  esempio_fattura_test.xml  esempio_stylesheet.xsl  framework.h  welcome.html  (+5 more)
.github/: copilot-instructions.md
.github/workflows/: build.yml
Installer/: Build-Installer.ps1  FatturaView.iss  README.md  build_release.ps1  setup.iss
linux/: CMakeLists.txt  README.md  build-linux.sh
linux/src/: FatturaParser.cpp  FatturaParser.h  MainWindow.cpp  MainWindow.h  PdfSigner.cpp  PdfSigner.h  main.cpp
